Fix intendation and add privacy page for TOday In Life

--- a/experiments.html
+++ b/experiments.html
@@ -1,138 +1,138 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-	<meta name="Description" content="application development, website development, engineering, product, service agency, bengaluru, flutter, react, react native, ruby on rails, nodejs, iot, arduino development">
-	<meta name="Keywords" content="application development, website development, engineering, product, service agency, bengaluru, flutter, react, react native, ruby on rails, nodejs, iot, arduino development">
-	<!-- Twitter Card data -->
-	<meta name="twitter:card" content="summary">
-	<meta name="twitter:site" content="@buildizy">
-	<meta name="twitter:title" content="Buildizy">
-	<meta name="twitter:description" content="Buildizy, Let's make something">
-	<meta name="twitter:creator" content="@buildizy">
-	<!-- <meta name="twitter:image" content="https://sidevesh.com/public/images/screenshot.png"> -->
-	<!-- Open Graph data -->
-	<meta property="og:title" content="Buildizy" />
-	<meta property="og:url" content="https://buildizy.netlify.com/" />
-    <!-- <meta property="og:image" content="https://sidevesh.com/public/images/screenshot.png" /> -->
-	<meta property="og:site_name" content="Buildizy" />
-	<meta property="og:description" content="Buildizy, Let's make something" /> 
-	<link rel="home" href="https://buildizy.netlify.com/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Buildizy | Experiments</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#007bff">
-    <meta name="apple-mobile-web-app-title" content="Buildizy">
-    <meta name="application-name" content="Buildizy">
-    <meta name="msapplication-TileColor" content="#007bff">
-    <meta name="theme-color" content="#007bff">
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/LineIcons.css">
-    <link rel="stylesheet" href="/assets/css/magnific-popup.css">
-    <link rel="stylesheet" href="/assets/css/owl.carousel.css">
-    <link rel="stylesheet" href="/assets/css/owl.theme.default.css">
-    <link rel="stylesheet" href="/assets/css/default.css">
-    <link rel="stylesheet" href="/assets/css/style.css">
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="Description" content="application development, website development, engineering, product, service agency, bengaluru, flutter, react, react native, ruby on rails, nodejs, iot, arduino development">
+  <meta name="Keywords" content="application development, website development, engineering, product, service agency, bengaluru, flutter, react, react native, ruby on rails, nodejs, iot, arduino development">
+  <!-- Twitter Card data -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@buildizy">
+  <meta name="twitter:title" content="Buildizy">
+  <meta name="twitter:description" content="Buildizy, Let's make something">
+  <meta name="twitter:creator" content="@buildizy">
+  <!-- <meta name="twitter:image" content="https://sidevesh.com/public/images/screenshot.png"> -->
+  <!-- Open Graph data -->
+  <meta property="og:title" content="Buildizy" />
+  <meta property="og:url" content="https://buildizy.com/" />
+  <!-- <meta property="og:image" content="https://sidevesh.com/public/images/screenshot.png" /> -->
+  <meta property="og:site_name" content="Buildizy" />
+  <meta property="og:description" content="Buildizy, Let's make something" /> 
+  <link rel="home" href="https://buildizy.com/" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Experiments | Buildizy</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#007bff">
+  <meta name="apple-mobile-web-app-title" content="Buildizy">
+  <meta name="application-name" content="Buildizy">
+  <meta name="msapplication-TileColor" content="#007bff">
+  <meta name="theme-color" content="#007bff">
+  <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/assets/css/LineIcons.css">
+  <link rel="stylesheet" href="/assets/css/magnific-popup.css">
+  <link rel="stylesheet" href="/assets/css/owl.carousel.css">
+  <link rel="stylesheet" href="/assets/css/owl.theme.default.css">
+  <link rel="stylesheet" href="/assets/css/default.css">
+  <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
-    <!--====== HEADER PART START ======-->
-    <header class="header-area">
-        <div class="navgition navgition-transparent">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <nav class="navbar navbar-expand-lg">
-                            <a class="navbar-brand" href="/">
-                                <img src="/assets/images/logos/gradient_logo.svg" style="width:50px;height:50px;" alt="Logo">
-                            </a>
-                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarOne" aria-controls="navbarOne" aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="toggler-icon"></span>
-                                <span class="toggler-icon"></span>
-                                <span class="toggler-icon"></span>
-                            </button>
-
-                            <div class="collapse navbar-collapse sub-menu-bar" id="navbarOne">
-                                <ul class="navbar-nav">
-                                    <li class="nav-item active">
-                                        <a href="/experiments">EXPERIMENTS</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="/#contact">CONTACT US</a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="navbar-social d-none d-sm-flex align-items-center">
-                                <span>FOLLOW US</span>
-                                <ul>
-                                    <li><a href="https://twitter.com/buildizy" target="_blank"><i class="lni-twitter-original"></i></a></li>
-                                    <li><a href="https://instagram.com/buildizy" target="_blank"><i class="lni-instagram-original"></i></a></li>
-                                    <li><a href="https://www.linkedin.com/company/buildizy" target="_blank"><i class="lni-linkedin-original"></i></a></li>                                  
-                                </ul>
-                            </div>
-                        </nav>
-                    </div>
-                </div>
-            </div>
+  <!--====== HEADER PART START ======-->
+  <header class="header-area">
+    <div class="navgition navgition-transparent">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <nav class="navbar navbar-expand-lg">
+              <a class="navbar-brand" href="/">
+                <img src="/assets/images/logos/gradient_logo.svg" style="width:50px;height:50px;" alt="Logo">
+              </a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarOne" aria-controls="navbarOne" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="toggler-icon"></span>
+                <span class="toggler-icon"></span>
+                <span class="toggler-icon"></span>
+              </button>
+              
+              <div class="collapse navbar-collapse sub-menu-bar" id="navbarOne">
+                <ul class="navbar-nav">
+                  <li class="nav-item active">
+                    <a href="/experiments">EXPERIMENTS</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="/#contact">CONTACT US</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="navbar-social d-none d-sm-flex align-items-center">
+                <span>FOLLOW US</span>
+                <ul>
+                  <li><a href="https://twitter.com/buildizy" target="_blank"><i class="lni-twitter-original"></i></a></li>
+                  <li><a href="https://instagram.com/buildizy" target="_blank"><i class="lni-instagram-original"></i></a></li>
+                  <li><a href="https://www.linkedin.com/company/buildizy" target="_blank"><i class="lni-linkedin-original"></i></a></li>                                  
+                </ul>
+              </div>
+            </nav>
+          </div>
         </div>
-    </header>
-    <!--====== HEADER PART ENDS ======-->
-
-    <!--====== EXPERIMENTS PART START ======-->
-    <section id="experiments" class="experiments-area">
-        <div class="container">
-            <div class="card-columns">
-                <div class="card" style="margin:10px;border-radius:40px;">
-                    <img class="card-img-top" style="width:inherit;height:auto;border-radius:40px;" src="/assets/images/experiments/microanimation.gif"/>
-                </div>
-                <div class="card" style="margin:10px;">
-                    <img class="card-img-top" style="width:inherit;height:auto;" src="/assets/images/experiments/painter.gif"/>
-                </div>
-                <div class="card" style="margin:10px;border-radius:36px;">
-                    <img class="card-img-top" style="width:inherit;height:auto;border-radius:36px;" src="/assets/images/experiments/wpcards.gif"/>
-                </div>
-            </div>
-            <div class="card-columns">
-                <div class="card" style="margin:10px;">
-                    <img class="card-img-top" style="width:inherit;height:auto;" src="/assets/images/experiments/today_rn.gif"/>
-                </div>
-                <div class="card" style="margin:10px;width:640px;max-width:90vw;">
-                    <img class="card-img-top" style="width:inherit;height:auto;" src="/assets/images/experiments/mac_quark.gif"/>
-                    <p class="card-text">quark-carlo</p>
-                    <a href="https://github.com/SiDevesh/Quark-Carlo" target="_blank" class="card-link">GitHub</a>
-                </div>
-            </div>
+      </div>
+    </div>
+  </header>
+  <!--====== HEADER PART ENDS ======-->
+  
+  <!--====== EXPERIMENTS PART START ======-->
+  <section id="experiments" class="experiments-area">
+    <div class="container">
+      <div class="card-columns">
+        <div class="card" style="margin:10px;border-radius:40px;">
+          <img class="card-img-top" style="width:inherit;height:auto;border-radius:40px;" src="/assets/images/experiments/microanimation.gif"/>
         </div>
-    </section>
-    <!--====== EXPERIMENTS PART ENDS ======-->
-
-    <!--====== BACK TO TOP PART START ======-->
-    <a class="back-to-top" href="#"><i class="lni-chevron-up"></i></a>
-    <!--====== BACK TO TOP PART ENDS ======-->
-
-    <script src="/assets/js/vendor/modernizr-3.6.0.min.js"></script>
-    <script src="/assets/js/vendor/jquery-1.12.4.min.js"></script>
-    <script src="/assets/js/bootstrap.min.js"></script>
-    <script src="/assets/js/popper.min.js"></script>
-    <script src="/assets/js/ajax-contact.js"></script>
-    <script src="/assets/js/jquery.easing.min.js"></script>
-    <script src="/assets/js/scrolling-nav.js"></script>
-    <script src="/assets/js/validator.min.js"></script>
-    <script src="/assets/js/jquery.magnific-popup.min.js"></script>
-    <script src="/assets/js/jquery.mousewheel.min.js"></script>
-    <script src="/assets/js/owl.carousel.min.js"></script>
-    <script src="/assets/js/main.js"></script>
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        ga('create', 'UA-101219891-6', 'auto');
-        ga('send', 'pageview');
-    </script>
-    <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="cc00b832-67f3-4a26-a2e0-e2efef64c17b";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
+        <div class="card" style="margin:10px;">
+          <img class="card-img-top" style="width:inherit;height:auto;" src="/assets/images/experiments/painter.gif"/>
+        </div>
+        <div class="card" style="margin:10px;border-radius:36px;">
+          <img class="card-img-top" style="width:inherit;height:auto;border-radius:36px;" src="/assets/images/experiments/wpcards.gif"/>
+        </div>
+      </div>
+      <div class="card-columns">
+        <div class="card" style="margin:10px;">
+          <img class="card-img-top" style="width:inherit;height:auto;" src="/assets/images/experiments/today_rn.gif"/>
+        </div>
+        <div class="card" style="margin:10px;width:640px;max-width:90vw;">
+          <img class="card-img-top" style="width:inherit;height:auto;" src="/assets/images/experiments/mac_quark.gif"/>
+          <p class="card-text">quark-carlo</p>
+          <a href="https://github.com/SiDevesh/Quark-Carlo" target="_blank" class="card-link">GitHub</a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--====== EXPERIMENTS PART ENDS ======-->
+  
+  <!--====== BACK TO TOP PART START ======-->
+  <a class="back-to-top" href="#"><i class="lni-chevron-up"></i></a>
+  <!--====== BACK TO TOP PART ENDS ======-->
+  
+  <script src="/assets/js/vendor/modernizr-3.6.0.min.js"></script>
+  <script src="/assets/js/vendor/jquery-1.12.4.min.js"></script>
+  <script src="/assets/js/bootstrap.min.js"></script>
+  <script src="/assets/js/popper.min.js"></script>
+  <script src="/assets/js/ajax-contact.js"></script>
+  <script src="/assets/js/jquery.easing.min.js"></script>
+  <script src="/assets/js/scrolling-nav.js"></script>
+  <script src="/assets/js/validator.min.js"></script>
+  <script src="/assets/js/jquery.magnific-popup.min.js"></script>
+  <script src="/assets/js/jquery.mousewheel.min.js"></script>
+  <script src="/assets/js/owl.carousel.min.js"></script>
+  <script src="/assets/js/main.js"></script>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-101219891-6', 'auto');
+    ga('send', 'pageview');
+  </script>
+  <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="cc00b832-67f3-4a26-a2e0-e2efef64c17b";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
 </body>
 </html>
