hHange Today In Life link to landing page in prep for all platforms launch announcement

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
           <div class="card-body">
             <h5 class="card-title">Today In Life</h5>
             <p class="card-text mb-5">Plan your life, not tasks</p>
-            <a href="https://play.google.com/store/apps/details?id=com.sidevesh.todayinlife&hl=en" class="btn btn-primary" target="_blank">Learn More</a>
+            <a href="/today" class="btn btn-primary" target="_blank">Learn More</a>
           </div>
         </div>
         <div class="col-md-5 col-sm-12 card shadow p-0" style="margin:10px;">
