Add App Store download badge to Today In Life landing page

--- a/today/index.html
+++ b/today/index.html
@@ -81,7 +81,7 @@
     <section id="today">
       <div class="container">
         <div class="d-flex flex-column flex-lg-row justify-content-center align-items-center">
-          <img id="today-mockup" src="/assets//images/today/1.png" />
+          <img id="today-mockup" src="/assets/images/today/1.png" />
           <div class="d-flex flex-column justify-content-center align-items-start" style="margin-left:24px;flex:0.5;">
             <div class="d-flex flex-row justify-content-start align-items-start">
               <h2 style="margin-bottom:16px;">
@@ -89,9 +89,15 @@
                 Today In Life
               </h2>
             </div>
-            <a class="d-block d-lg-none" href="https://play.google.com/store/apps/details?id=com.sidevesh.todayinlife&hl=en_IN&utm_source=buildizy-landing&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1">
-              <img alt="Get it on Google Play" src="/assets/images/today/play_en_badge_web_generic.png" style="height:50px;width:auto;"/>
-            </a>
+            <div class="d-flex d-lg-none flex-row">
+              <a href="https://apps.apple.com/app/id1510245270?utm_source=buildizy-landing" style="margin-bottom:16px;">
+                <img alt="Get it on Google Play" src="/assets/images/today/appstore_en_badge_web_generic.png" style="height:50px;width:auto;"/>
+              </a>
+              <div style="width:8px;"></div>
+              <a href="https://play.google.com/store/apps/details?id=com.sidevesh.todayinlife&hl=en_IN&utm_source=buildizy-landing&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1" style="margin-bottom:16px;">
+                <img alt="Get it on Google Play" src="/assets/images/today/play_en_badge_web_generic.png" style="height:50px;width:auto;"/>
+              </a>
+            </div>
             <p style="white-space:pre-line;margin-bottom:16px;">
               Today In Life is more than just a planner,
               kickstart your days by reminding yourself of your goals,
@@ -102,9 +108,15 @@
               In a busy life its easy to lose focus from what matters and to get bogged down by tasks in your todo list.
               Today In Life helps you stay reminded of the things that matter so that you don't lose perspective and remain motivated throughout the day.
             </p>
-            <a class="d-none d-lg-block" href="https://play.google.com/store/apps/details?id=com.sidevesh.todayinlife&hl=en_IN&utm_source=buildizy-landing&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1" style="margin-bottom:16px;">
-              <img alt="Get it on Google Play" src="/assets/images/today/play_en_badge_web_generic.png" style="height:50px;width:auto;"/>
-            </a>
+            <div class="d-none d-lg-flex flex-row">
+              <a href="https://apps.apple.com/app/id1510245270?utm_source=buildizy-landing" style="margin-bottom:16px;">
+                <img alt="Get it on Google Play" src="/assets/images/today/appstore_en_badge_web_generic.png" style="height:50px;width:auto;"/>
+              </a>
+              <div style="width:8px;"></div>
+              <a href="https://play.google.com/store/apps/details?id=com.sidevesh.todayinlife&hl=en_IN&utm_source=buildizy-landing&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1" style="margin-bottom:16px;">
+                <img alt="Get it on Google Play" src="/assets/images/today/play_en_badge_web_generic.png" style="height:50px;width:auto;"/>
+              </a>
+            </div>
             <!--====== SUPPORT MODAL TRIGGER START ======-->
             <button type="button" class="btn btn-link" data-toggle="modal" data-target="#supportContactModal" style="color:#393939;">
               Need support ?
