--- a/today/index.html
+++ b/today/index.html
@@ -56,6 +56,14 @@
               </button>
               
               <div class="collapse navbar-collapse sub-menu-bar" id="navbarOne">
+                <ul class="navbar-nav">
+                  <li class="nav-item active">
+                    <a href="/today">Today In Life</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="/#contact">CONTACT US</a>
+                  </li>
+                </ul>
               </div>
               <div class="navbar-social d-none d-sm-flex align-items-center">
                 <span>FOLLOW US</span>
