--- a/today/index.html
+++ b/today/index.html
@@ -8,16 +8,16 @@
   <!-- Twitter Card data -->
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@buildizy">
-  <meta name="twitter:title" content="Buildizy">
-  <meta name="twitter:description" content="Buildizy, Let's make something">
+  <meta name="twitter:title" content="Today In Life">
+  <meta name="twitter:description" content="Today In Life, Plan your life, not tasks">
   <meta name="twitter:creator" content="@buildizy">
   <!-- <meta name="twitter:image" content="https://sidevesh.com/public/images/screenshot.png"> -->
   <!-- Open Graph data -->
-  <meta property="og:title" content="Buildizy" />
-  <meta property="og:url" content="https://buildizy.com/" />
+  <meta property="og:title" content="Today In Life" />
+  <meta property="og:url" content="https://buildizy.com/today" />
   <!-- <meta property="og:image" content="https://sidevesh.com/public/images/screenshot.png" /> -->
-  <meta property="og:site_name" content="Buildizy" />
-  <meta property="og:description" content="Buildizy, Let's make something" /> 
+  <meta property="og:site_name" content="Today In Life | Buildizy" />
+  <meta property="og:description" content="Today In Life, Plan your life, not tasks" /> 
   <link rel="home" href="https://buildizy.com/" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Today In Life | Buildizy</title>
