Add preview images

--- a/today/index.html
+++ b/today/index.html
@@ -11,11 +11,11 @@
   <meta name="twitter:title" content="Today In Life">
   <meta name="twitter:description" content="Today In Life, Plan your life, not tasks">
   <meta name="twitter:creator" content="@buildizy">
-  <!-- <meta name="twitter:image" content="https://sidevesh.com/public/images/screenshot.png"> -->
+  <meta name="twitter:image" content="https://buildizy.com/assets/images/today/preview.jpg">
   <!-- Open Graph data -->
   <meta property="og:title" content="Today In Life" />
   <meta property="og:url" content="https://buildizy.com/today" />
-  <!-- <meta property="og:image" content="https://sidevesh.com/public/images/screenshot.png" /> -->
+  <meta property="og:image" content="https://buildizy.com/assets/images/today/preview.jpg"/>
   <meta property="og:site_name" content="Today In Life | Buildizy" />
   <meta property="og:description" content="Today In Life, Plan your life, not tasks" /> 
   <link rel="home" href="https://buildizy.com/" />
