--- a/today/privacy.html
+++ b/today/privacy.html
@@ -11,11 +11,11 @@
   <meta name="twitter:title" content="Buildizy">
   <meta name="twitter:description" content="Buildizy, Let's make something">
   <meta name="twitter:creator" content="@buildizy">
-  <!-- <meta name="twitter:image" content="https://sidevesh.com/public/images/screenshot.png"> -->
+  <meta name="twitter:image" content="https://buildizy.com/assets/images/today/logo.png">
   <!-- Open Graph data -->
   <meta property="og:title" content="Buildizy" />
   <meta property="og:url" content="https://buildizy.com/" />
-  <!-- <meta property="og:image" content="https://sidevesh.com/public/images/screenshot.png" /> -->
+  <meta property="og:image" content="https://buildizy.com/assets/images/today/logo.png" />
   <meta property="og:site_name" content="Buildizy" />
   <meta property="og:description" content="Buildizy, Let's make something" /> 
   <link rel="home" href="https://buildizy.com/" />
