Add PH badge on Today landing page

--- a/today/index.html
+++ b/today/index.html
@@ -106,6 +106,7 @@
                 <img alt="Get it on Google Play" src="/assets/images/today/play_en_badge_web_generic.png" style="height:50px;width:auto;"/>
               </a>
             </div>
+            <a class="d-block d-lg-none" href="https://www.producthunt.com/posts/today-in-life?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-today-in-life" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=269397&theme=light" alt="Today In Life - Plan your life, not tasks | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
             <p style="white-space:pre-line;margin-bottom:16px;">
               Today In Life is more than just a planner,
               kickstart your days by reminding yourself of your goals,
@@ -125,6 +126,7 @@
                 <img alt="Get it on Google Play" src="/assets/images/today/play_en_badge_web_generic.png" style="height:50px;width:auto;"/>
               </a>
             </div>
+            <a class="d-none d-lg-block" href="https://www.producthunt.com/posts/today-in-life?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-today-in-life" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=269397&theme=light" alt="Today In Life - Plan your life, not tasks | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
             <!--====== SUPPORT MODAL TRIGGER START ======-->
             <button type="button" class="btn btn-link" data-toggle="modal" data-target="#supportContactModal" style="color:#393939;">
               Need support ?
