--- a/index.html
+++ b/index.html
@@ -442,33 +442,15 @@
           <div class="contact-form">
             <form id="contact-form" accept-charset="UTF-8" action="https://www.formbackend.com/f/41c4270ba34b0fe1" method="post" data-toggle="validator">
               <div class="row">
-                <div class="col-md-6">
-                  <div class="single-form form-group">
-                    <input type="text" name="name" placeholder="Your Name" data-error="Name is required." required="required">
-                    <div class="help-block with-errors"></div>
-                  </div>
-                </div>
-                <div class="col-md-6">
+                <div class="col-md-12">
                   <div class="single-form form-group">
                     <input type="email" name="email" placeholder="Your Email" data-error="Valid email is required." required="required">
                     <div class="help-block with-errors"></div>
                   </div>
                 </div>
-                <div class="col-md-6">
-                  <div class="single-form form-group">
-                    <input type="text" name="subject" placeholder="Subject" data-error="Subject is required." required="required">
-                    <div class="help-block with-errors"></div>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="single-form form-group">
-                    <input type="text" name="phone" placeholder="Phone" data-error="Phone is required." required="required">
-                    <div class="help-block with-errors"></div>
-                  </div>
-                </div>
                 <div class="col-md-12">
                   <div class="single-form form-group">
-                    <textarea placeholder="Your Mesaage" name="message" data-error="Please, leave us a message." required="required"></textarea>
+                    <textarea placeholder="Your Message" name="message" data-error="Please, leave us a message." required="required"></textarea>
                     <div class="help-block with-errors"></div>
                   </div>
                 </div>
