--- a/today/privacy.html
+++ b/today/privacy.html
@@ -85,9 +85,9 @@
   <section id="today-privacy-policy" class="today-privacy-policy-area">
     <div class="container">
       <strong>Privacy Policy</strong><p>
-        Swapnil Devesh built the Today In Life app as
+        Entropy Positive Pvt Ltd built the Today In Life app as
         a Free app. This SERVICE is provided by
-        Swapnil Devesh at no cost and is intended for use as
+        Entropy Positive Pvt Ltd at no cost and is intended for use as
         is.
       </p><br/><p>
         This page is used to inform visitors regarding my
