--- a/today/privacy.html
+++ b/today/privacy.html
@@ -170,7 +170,7 @@
         this page.
       </p> <p>This policy is effective as of 2020-04-26</p><br/><p><strong>Contact Us</strong></p> <p>
         If you have any questions or suggestions about my
-        Privacy Policy, do not hesitate to contact me at me@sidevesh.com.
+        Privacy Policy, do not hesitate to contact me at swapnil@buildizy.com.
       </p>
     </div>
   </section>
