--- a/today/privacy.html
+++ b/today/privacy.html
@@ -92,9 +92,9 @@
       </p><br/><p>
         This page is used to inform visitors regarding my
         policies with the collection, use, and disclosure of Personal
-        Information if anyone decided to use my Service.
+        Information if anyone decided to use our Service.
       </p> <p>
-        If you choose to use my Service, then you agree to
+        If you choose to use our Service, then you agree to
         the collection and use of information in relation to this
         policy. The Personal Information that we collect is
         used for providing and improving the Service. we will not use or share your information with
@@ -103,15 +103,15 @@
         For a better experience, while using our Service, I
         may require you to provide us with certain personally
         identifiable information. The information that
-        we request will be retained on your device and is not collected by me in any way.
+        we request will be retained on your device and is not collected by us in any way.
       </p><br/><p><strong>Log Data</strong></p> <p>
         We want to inform you that whenever you
-        use my Service, in a case of an error in the app
+        use our Service, in a case of an error in the app
         we collect data and information (through third party
         products) on your phone called Log Data. This Log Data may
         include information such as your device Internet Protocol
         (“IP”) address, device name, operating system version, the
-        configuration of the app when utilizing my Service,
+        configuration of the app when utilizing our Service,
         the time and date of your use of the Service, and other
         statistics.
       </p><br/><p><strong>Cookies</strong></p> <p>
@@ -157,10 +157,10 @@
         We do not knowingly collect personally
         identifiable information from children under 13. In the case
         we discover that a child under 13 has provided
-        me with personal information, we immediately
+        us with personal information, we immediately
         delete this from our servers. If you are a parent or guardian
         and you are aware that your child has provided us with
-        personal information, please contact me so that
+        personal information, please contact us so that
         we will be able to do necessary actions.
       </p><br/><p><strong>Changes to This Privacy Policy</strong></p> <p>
         We may update our Privacy Policy from
@@ -170,7 +170,7 @@
         this page.
       </p> <p>This policy is effective as of 2020-04-26</p><br/><p><strong>Contact Us</strong></p> <p>
         If you have any questions or suggestions about my
-        Privacy Policy, do not hesitate to contact me at swapnil@buildizy.com.
+        Privacy Policy, do not hesitate to contact us at swapnil@buildizy.com.
       </p>
     </div>
   </section>
