--- a/today/privacy.html
+++ b/today/privacy.html
@@ -90,7 +90,7 @@
         Entropy Positive Pvt Ltd at no cost and is intended for use as
         is.
       </p><br/><p>
-        This page is used to inform visitors regarding my
+        This page is used to inform visitors regarding our
         policies with the collection, use, and disclosure of Personal
         Information if anyone decided to use our Service.
       </p> <p>
@@ -100,7 +100,7 @@
         used for providing and improving the Service. we will not use or share your information with
         anyone except as described in this Privacy Policy.
       </p><br/><p><strong>Information Collection and Use</strong></p> <p>
-        For a better experience, while using our Service, I
+        For a better experience, while using our Service, we
         may require you to provide us with certain personally
         identifiable information. The information that
         we request will be retained on your device and is not collected by us in any way.
@@ -169,8 +169,8 @@
         notify you of any changes by posting the new Privacy Policy on
         this page.
       </p> <p>This policy is effective as of 2020-04-26</p><br/><p><strong>Contact Us</strong></p> <p>
-        If you have any questions or suggestions about my
-        Privacy Policy, do not hesitate to contact us at swapnil@buildizy.com.
+        If you have any questions or suggestions about our
+        Privacy Policy, do not hesitate to contact us through swapnil@buildizy.com.
       </p>
     </div>
   </section>
